wxc/include/ewxw/wxc_glue.h




/* Misc. */
int        ELJSysErrorCode(  );

void*      ELJSysErrorMsg( int nErrCode );

void       LogErrorMsg( TStringVoid _msg );

void       LogFatalErrorMsg( TStringVoid _msg );

void       LogMessageMsg( TStringVoid _msg );

void       LogWarningMsg( TStringVoid _msg );


/* ELJLocale */
TClassDefExtend(ELJLocale,wxLocale)

/* ELJLog */
TClassDefExtend(ELJLog,wxLog)
void       ELJLog_AddTraceMask( TSelf(ELJLog) _obj, TStringVoid str );

TClass(ELJLog) ELJLog_Create( void* _obj, void* _fnc );

void       ELJLog_Delete( TSelf(ELJLog) _obj );

void       ELJLog_DontCreateOnDemand( TSelf(ELJLog) _obj );

int        ELJLog_EnableLogging( TSelf(ELJLog) _obj, TBool doIt );

void       ELJLog_Flush( TSelf(ELJLog) _obj );

void       ELJLog_FlushActive( TSelf(ELJLog) _obj );

void*      ELJLog_GetActiveTarget(  );

void*      ELJLog_GetTimestamp( TSelf(ELJLog) _obj );

int        ELJLog_GetTraceMask( TSelf(ELJLog) _obj );

int        ELJLog_GetVerbose( TSelf(ELJLog) _obj );

TBool      ELJLog_HasPendingMessages( TSelf(ELJLog) _obj );

TBool      ELJLog_IsAllowedTraceMask( TSelf(ELJLog) _obj, TClass(wxMask) mask );

TBool      ELJLog_IsEnabled( TSelf(ELJLog) _obj );

void       ELJLog_OnLog( TSelf(ELJLog) _obj, int level, void* szString, int t );

void       ELJLog_RemoveTraceMask( TSelf(ELJLog) _obj, TStringVoid str );

void       ELJLog_Resume( TSelf(ELJLog) _obj );

void*      ELJLog_SetActiveTarget( TSelf(ELJLog) pLogger );

void       ELJLog_SetTimestamp( TSelf(ELJLog) _obj, void* ts );

void       ELJLog_SetTraceMask( TSelf(ELJLog) _obj, int ulMask );

void       ELJLog_SetVerbose( TSelf(ELJLog) _obj, int bVerbose );

void       ELJLog_Suspend( TSelf(ELJLog) _obj );

void       wxLogChain_Delete( TSelf(wxLogChain) _obj );

TClass(wxLog) wxLogChain_GetOldLog( TSelf(wxLogChain) _obj );

TBool      wxLogChain_IsPassingMessages( TSelf(wxLogChain) _obj );

void       wxLogChain_PassMessages( TSelf(wxLogChain) _obj, TBoolInt bDoPass );

void       wxLogChain_SetLog( TSelf(wxLogChain) _obj, TClass(wxLog) logger );